k8s/pgadmin.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: "dpage/pgadmin4"
          imagePullPolicy: IfNotPresent
          # envFrom:
          #   - configMapRef:
          #       name: pgadmin
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
          # volumeMounts:
          #   - name: pgadmin-data
          #     mountPath: /var/lib/pgadmin
      # volumes:
      #   - name: pgadmin-data
      #     persistentVolumeClaim:
      #       claimName: pgadmin
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  labels:
    app: pgadmin
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: pgadmin
