k8s/service-echo.yml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  ports:
    - port: 80
  selector:
    app: echo
