k8s/service-tutum.yml
apiVersion: v1
kind: Service
metadata:
  name: service-tutum
spec:
  ports:
    - port: 80
  selector:
    app: tutum
