k8s/tutum.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tutum
  labels:
    app: tutum
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tutum
  template:
    metadata:
      labels:
        app: tutum
    spec:
      containers:
        - name: tutum
          image: tutum/hello-world:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: tutum-service
spec:
  ports:
    - port: 80
  selector:
    app: tutum
