k8s/echo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  labels:
    app: echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
        - name: echo
          image: ealen/echo-server:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  ports:
    - port: 80
  selector:
    app: echo

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/rewrites: "serviceName=echo-service rewrite=/"

spec:
  rules:
    - host: newnlb-2acfd26c77b64b7b.elb.ap-southeast-1.amazonaws.com
      http:
        paths:
          - path: /echo
            pathType: Exact
            backend:
              serviceName: echo-service
              servicePort: 80
