k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: nonhelm
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/rewrites: "serviceName=service-echo rewrite=/"
    nginx.org/rewrites: "serviceName=service-tutum rewrite=/"
  labels:
    app: new-ingress

spec:
  rules:
    - host: a369e0d83899c4a6f84e7d8c191051b1-1840697107.ap-southeast-1.elb.amazonaws.com
      http:
        paths:
          - path: /echo
            pathType: Exact
            backend:
              serviceName: service-echo
              servicePort: 80

          - path: /hello
            pathType: Exact
            backend:
              serviceName: service-tutum
              servicePort: 80
